--- a/web-mark-1.html
+++ b/web-mark-1.html
@@ -89,3 +89,247 @@
   </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Page 2</title>
+  <style>
+    :root{ --accent:#ff5ca8; --card-bg: rgba(255,255,255,0.95); --muted:#666; }
+    html,body{ height:100%; margin:0; }
+    body { display:flex; align-items:center; justify-content:center; font-family: Inter, -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial; background: linear-gradient(135deg,#764ba2 0%,#667eea 100%); color:#222; }
+    .card{ background:var(--card-bg); color:#222; padding:1.4rem 1.8rem; border-radius:12px; box-shadow:0 12px 30px rgba(0,0,0,0.12); text-align:center; max-width:720px; width:92%; position:relative; }
+    h1{ margin:0; font-size: clamp(30px, 4.4vw, 40px); font-family: 'Dancing Script', cursive; color:#3a2a69; }
+    p{ margin:0.6rem 0 0.8rem; color:var(--muted); font-size:1.05rem; }
+    .controls{ margin-top:0.8rem; display:flex; gap:0.6rem; justify-content:center; align-items:center; }
+    a.btn{ display:inline-block; padding:0.66rem 0.9rem; border-radius:8px; text-decoration:none; color:#fff; background:var(--accent); font-weight:700; box-shadow:0 12px 30px rgba(0,0,0,0.12); transition:transform 160ms ease, box-shadow 160ms ease; }
+    a.btn.secondary{ background:#999; }
+    a.btn:focus{ outline:3px solid rgba(255,255,255,0.12); }
+    a.btn:hover{ transform: translateY(-3px); box-shadow:0 18px 34px rgba(0,0,0,0.16); }
+
+    /* Confetti canvas overlays the page */
+    #confettiCanvas { position:fixed; left:0; top:0; width:100%; height:100%; pointer-events:none; z-index:9999; }
+
+    /* floating emojis */
+    .emoji{ position:absolute; font-size:26px; opacity:0.96; pointer-events:none; user-select:none; animation: float 6s ease-in-out infinite; }
+    .emoji.left{ left:-6%; top:-4%; animation-duration:6s; }
+    .emoji.right{ right:-6%; top:-6%; animation-duration:7.2s; }
+    .emoji.bottom-left{ left:-6%; bottom:-6%; animation-duration:5.2s; }
+    .emoji.bottom-right{ right:-6%; bottom:-8%; animation-duration:7.6s; }
+    @keyframes float{ 0%{ transform: translateY(0) rotate(0deg);} 50%{ transform: translateY(-12px) rotate(12deg);} 100%{ transform: translateY(0) rotate(0deg);} }
+
+    @media (max-width:600px){ .card{ width: min(94%, 520px); padding:1rem; } a.btn{ display:block; width:100%; } }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <div class="emoji left" aria-hidden>🎈</div>
+    <div class="emoji right" aria-hidden>✨</div>
+    <div class="emoji bottom-left" aria-hidden>💖</div>
+    <div class="emoji bottom-right" aria-hidden>🎉</div>
+
+    <h1>I made you a surprise</h1>
+    <div class="accentBar" aria-hidden style="height:4px;width:48px;margin:10px auto;background:linear-gradient(90deg,#fff3f5,#ff5ca8);border-radius:8px;"></div>
+    <p>I made you a surprise. Do you want to see it?</p>
+    <div class="controls">
+      <a id="yesBtn" class="btn" href="page3.html" style="background:#ff5ca8; transform-origin:center;">Yes, show me 🎁</a>
+      <a id="noBtn" class="btn secondary" href="#" aria-label="No, maybe later">No, maybe later ◀</a>
+    </div>
+  </div>
+  <!-- Canvas for confetti animation -->
+  <canvas id="confettiCanvas" aria-hidden="true"></canvas>
+
+  <script>
+    // Simple confetti burst implementation
+    (function(){
+      const canvas = document.getElementById('confettiCanvas');
+      const ctx = canvas.getContext('2d');
+      let w = canvas.width = window.innerWidth;
+      let h = canvas.height = window.innerHeight;
+      const particles = [];
+
+      function rand(min, max){ return Math.random() * (max - min) + min; }
+
+      function Particle(x,y,dx,dy,size,color){
+        this.x = x; this.y = y; this.dx = dx; this.dy = dy; this.size = size; this.color = color; this.tilt = rand(-10,10);
+        this.update = function(dt){ this.x += this.dx * dt; this.y += this.dy * dt; this.dy += 0.0015 * dt; this.tilt += 0.02 * dt; };
+        this.draw = function(ctx){ ctx.save(); ctx.translate(this.x, this.y); ctx.rotate(this.tilt); ctx.fillStyle = this.color; ctx.fillRect(-this.size/2, -this.size/2, this.size, this.size); ctx.restore(); };
+      }
+
+      function createBurst(x, y, count){
+        const colors = ['#FF5CA8','#FFB86B','#FFD166','#7AE7C7','#7EA9FF','#D28BFF'];
+        for(let i=0;i<count;i++){
+          const angle = rand(0, Math.PI * 2);
+          const speed = rand(0.6, 3.5);
+          const dx = Math.cos(angle) * speed;
+          const dy = Math.sin(angle) * speed * -1.2;
+          const size = Math.floor(rand(6, 14));
+          const color = colors[Math.floor(rand(0, colors.length))];
+          particles.push(new Particle(x + rand(-10,10), y + rand(-10,10), dx, dy, size, color));
+        }
+      }
+
+      let last = performance.now();
+      let running = false;
+
+      function resize(){ w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
+      window.addEventListener('resize', resize);
+
+      function animate(now){
+        const dt = Math.min(50, now - last);
+        last = now;
+        ctx.clearRect(0,0,w,h);
+        for(let i=particles.length-1;i>=0;i--){
+          const p = particles[i];
+          p.update(dt);
+          p.draw(ctx);
+          if(p.y - p.size > h + 50 || p.x < -50 || p.x > w + 50) particles.splice(i,1);
+        }
+        if(particles.length>0) requestAnimationFrame(animate); else running = false;
+      }
+
+      function fireConfettiAndNavigate(url, count){
+        // burst from center-top area
+        const x = w/2; const y = h/3; createBurst(x, y, count || 80);
+        if(!running){ running = true; last = performance.now(); requestAnimationFrame(animate); }
+        // clear persisted scale so the button resets next time
+        try { localStorage.removeItem('yesScale'); } catch (err) {}
+        // navigate after delay so user sees burst
+        if(url){ setTimeout(()=>{ window.location.href = url; }, 1200); }
+      }
+
+      const yesBtn = document.getElementById('yesBtn');
+      const noBtn = document.getElementById('noBtn');
+
+      // Apply persisted scale to Yes button on load
+      function applyYesScale(){
+        const s = parseFloat(localStorage.getItem('yesScale') || '1');
+        yesBtn.style.transform = 'scale(' + s + ')';
+      }
+      applyYesScale();
+
+      // Grow yes button when No is clicked (persisted in localStorage) — playful tease
+      noBtn.addEventListener('click', function(e){
+        e.preventDefault();
+        const key = 'yesScale';
+        const current = parseFloat(localStorage.getItem(key) || '1');
+        const next = Math.min(current * 1.18, 6); // grow ~18% each click, cap at 6x
+        localStorage.setItem(key, String(next));
+        // animate growth briefly
+        yesBtn.style.transition = 'transform 220ms cubic-bezier(.2,.9,.2,1)';
+        yesBtn.style.transform = 'scale(' + next + ')';
+        // small pulse effect
+        setTimeout(()=>{ yesBtn.style.transform = 'scale(' + (next * 1.03) + ')'; }, 220);
+        setTimeout(()=>{ yesBtn.style.transform = 'scale(' + next + ')'; }, 420);
+      });
+
+      // When the user leaves the page (navigates away), reset the saved scale
+      window.addEventListener('pagehide', function(){
+        try { localStorage.removeItem('yesScale'); } catch (err) {}
+      });
+
+      // Yes button behavior: confetti then navigate
+      yesBtn.addEventListener('click', function(e){ e.preventDefault(); // pulse the button
+        yesBtn.style.transform = 'scale(0.98)'; setTimeout(()=>{ yesBtn.style.transform='scale(1)'; }, 160);
+        fireConfettiAndNavigate('page3.html', 80);
+      });
+
+      // keyboard support
+      yesBtn.addEventListener('keydown', function(e){ if(e.key === ' ' || e.key === 'Spacebar' || e.key === 'Enter'){ e.preventDefault(); this.click(); } });
+      noBtn.addEventListener('keydown', function(e){ if(e.key === ' ' || e.key === 'Spacebar' || e.key === 'Enter'){ e.preventDefault(); this.click(); } });
+    })();
+  </script>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Love letter for crush</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet" />
+    <style>
+      :root{ --accent:#ff5ca8; --bg1:#ff9a9e; --bg2:#fecfef; }
+      html,body{ height:100%; margin:0; font-family:-apple-system,BlinkMacSystemFont, 'Segoe UI', Roboto, Arial; }
+      body{ display:flex; align-items:center; justify-content:center; background: linear-gradient(135deg,var(--bg1) 0%,var(--bg2) 100%); }
+      .envlope-wrapper{ width:92%; max-width:780px; display:flex; align-items:center; justify-content:center; }
+      #envelope{ width:420px; height:260px; position:relative; perspective:900px; }
+      .front{ position:absolute; width:100%; height:100%; left:0; top:0; border-radius:12px; box-shadow:0 14px 40px rgba(0,0,0,0.12); overflow:hidden; }
+      .front.pocket{ background: linear-gradient(180deg,#fff,#ffeef8); transform: translateY(8px); }
+      .front.flap{ transform-origin: top; background: linear-gradient(180deg,#fff,#ffd0ea); height:72%; z-index:6; }
+      #envelope.open .front.flap{ transform: rotateX(180deg) translateY(-10%); transition: transform 700ms cubic-bezier(.2,.9,.2,1); }
+      #envelope .letter{ position:absolute; left:22px; right:22px; top:30px; bottom:22px; background:white; border-radius:8px; display:flex; flex-direction:column; align-items:flex-start; justify-content:center; padding:18px; box-shadow: inset 0 1px 0 rgba(0,0,0,0.02); transform: translateY(0); transition: transform 700ms cubic-bezier(.2,.9,.2,1); }
+      #envelope.open .letter{ transform: translateY(-48px); opacity:1; }
+      #envelope.close .letter{ transform: translateY(12px); opacity:0; }
+      .words{ font-family:'Dancing Script', cursive; color:#3a2a69; font-size:20px; margin:4px 0; }
+      .hearts{ position:absolute; right:16px; top:10px; z-index:3; }
+      .heart{ width:18px; height:18px; background: #ff5ca8; transform: rotate(-45deg); border-radius:6px 6px 0 0; margin:6px 0; }
+      .reset{ display:flex; gap:10px; flex-direction:column; position:absolute; right:18px; top:18px; }
+      .reset button{ padding:8px 12px; border-radius:8px; border:0; background:var(--accent); color:#fff; font-weight:700; cursor:pointer; }
+      .reset a.btn{ display:inline-block; padding:8px 12px; border-radius:8px; text-decoration:none; color:#fff; }
+      .emoji{ position:absolute; font-size:26px; opacity:0.96; pointer-events:none; user-select:none; }
+      .emoji.one{ left:6%; top:6%; }
+      .emoji.two{ right:6%; top:8%; }
+      .emoji.three{ left:6%; bottom:8%; }
+      .emoji.four{ right:6%; bottom:6%; }
+      @media (max-width:520px){ #envelope{ width:92%; height: 220px; } .words{ font-size:18px; } .reset{ position:static; margin-top:14px; flex-direction:row; justify-content:center; gap:10px; } }
+    </style>
+  </head>
+  <body>
+    <!-- tiktok meowish -->
+    <div class="envlope-wrapper">
+      <div id="envelope" class="close">
+        <div class="front flap"></div>
+        <div class="front pocket"></div>
+        <div class="letter">
+          <div class="words line1">To: my love</div>
+          <div class="words line2">Dear my love, Happy birthday lov</div>
+          <div class="words line3">may you have more birthday to come</div>
+          <div class="words line4">i love you so much, and i miss you too<3</div>
+        </div>
+        <div class="hearts">
+          <div class="heart a1"></div>
+          <div class="heart a2"></div>
+          <div class="heart a3"></div>
+        </div>
+      </div>
+    </div>
+    <div class="reset">
+      <button id="open" aria-expanded="false" aria-controls="envelope">Open</button>
+      <button id="resetBtn">Close</button>
+      <a class="btn" href="web mark 1.html" style="background: #764ba2; text-decoration:none; padding:8px 12px; border-radius:8px; color:#fff;">Back to Page 1</a>
+      <a class="btn" href="page2.html" style="background:#ff5ca8; text-decoration:none; padding:8px 12px; border-radius:8px; color:#fff;">Back to Question</a>
+    </div>
+    <canvas id="confettiCanvas" aria-hidden="true" style="position:fixed;left:0;top:0;width:100%;height:100%;pointer-events:none;z-index:9999;"></canvas>
+    <script>
+      (function(){
+        const env = document.getElementById('envelope');
+        const openBtn = document.getElementById('open');
+        const resetBtn = document.getElementById('resetBtn');
+        function toggle(open){ if(open){ env.classList.remove('close'); env.classList.add('open'); } else { env.classList.remove('open'); env.classList.add('close'); }}
+        openBtn.addEventListener('click', function(){ toggle(true); triggerBurst(window.innerWidth/2, window.innerHeight/3, 80); openBtn.setAttribute('aria-expanded', 'true'); });
+        resetBtn.addEventListener('click', function(){ toggle(false); openBtn.setAttribute('aria-expanded', 'false'); });
+        openBtn.addEventListener('keydown', function(e){ if(e.key==='Enter' || e.key === ' '){ e.preventDefault(); this.click(); }});
+        resetBtn.addEventListener('keydown', function(e){ if(e.key==='Enter' || e.key === ' '){ e.preventDefault(); this.click(); }});
+        const canvas = document.getElementById('confettiCanvas');
+        const ctx = canvas.getContext && canvas.getContext('2d'); if(!ctx) return;
+        function setSize(){ canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
+        window.addEventListener('resize', setSize); setSize();
+        const particles = [];
+        function rand(min,max){ return Math.random()*(max-min)+min; }
+        function Particle(x,y,dx,dy,size,color){ this.x=x;this.y=y;this.dx=dx;this.dy=dy;this.size=size;this.color=color; }
+        Particle.prototype.update = function(dt){ this.x += this.dx * dt; this.y += this.dy * dt; this.dy += 0.0015 * dt; }
+        Particle.prototype.draw = function(ctx){ ctx.fillStyle = this.color; ctx.fillRect(this.x, this.y, this.size, this.size); }
+        function createBurst(x,y,count){ const colors=['#FF5CA8','#FFB86B','#FFD166','#7AE7C7','#7EA9FF','#D28BFF']; for(let i=0;i<count;i++){ const angle=rand(0,Math.PI*2); const speed=rand(0.6,3.5); const dx=Math.cos(angle)*speed; const dy=Math.sin(angle)*speed*-1.2; const size=Math.floor(rand(6,14)); const color=colors[Math.floor(rand(0,colors.length))]; particles.push(new Particle(x + rand(-10,10), y + rand(-10,10), dx, dy, size, color)); }}
+        let last = performance.now(); let running=false;
+        function animate(now){ const dt=Math.min(50, now-last); last=now; ctx.clearRect(0,0,canvas.width, canvas.height); for(let i=particles.length-1;i>=0;i--){ const p=particles[i]; p.update(dt); p.draw(ctx); if(p.y - p.size > canvas.height + 50 || p.x < -50 || p.x > canvas.width + 50) particles.splice(i,1); } if(particles.length>0) requestAnimationFrame(animate); else running=false; }
+        function triggerBurst(x,y,count){ createBurst(x,y,count); if(!running){ running=true; last=performance.now(); requestAnimationFrame(animate);} }
+      })();
+    </script>
+  </body>
+</html>
